--- a/styles/desktop-3.css
+++ b/styles/desktop-3.css
@@ -14,14 +14,14 @@ input {
 }
 body {
   width: 192rem;
-}.desktop-3-mYg {
+}.food_search_background {
   width: 100%;
   height: 108rem;
   position: relative;
   overflow: hidden;
   background-color: #f1e4d1;
 }
-.desktop-3-mYg .auto-group-ggxn-65A {
+.food_search_background .bottom_div {
   width: 184.4rem;
   height: 20.5rem;
   position: absolute;
@@ -29,48 +29,27 @@ body {
   top: 87.6rem;
   display: flex;
   align-items: center;
+  
 }
-.search-bar {
+.search_bar {
   display: flex;
-  color: #3b6bb2;
+  color: #1160d8;
   align-items: center;
   background-color: #3b6bb2;
   padding: 8px;
   border-radius: 8px;
   margin-top: 16px;
-  border: 2px solid #ddd; /* Border rengini değiştirebilirsin */
+  border: 2px solid #ddd; 
 }
 
-.search-bar input {
-  flex: 1;
-  color: #3b6bb2;
-  border: none;
-  padding: 8px;
-  font-size: 16px;
-  outline: none; /* Input outline'ını kaldırır */
-}
-
-.search-bar img {
-  width: 24px;
-  color: #3b6bb2;
-  height: 24px;
-  margin-left: 8px;
-  cursor: pointer;
-  filter: grayscale(100%); /* İkonu gri tonlamak için */
-}
-
-/* İkonun renk değişimi hover durumunda */
-.search-bar img:hover {
-  filter: none; /* İkonun orijinal rengine dönmek için */
-}
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-rgbw-bXi {
+.food_search_background .bottom_div .logout_div {
   margin: 0rem 127.447rem 1.9rem 0rem;
   align-items: flex-end;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-}
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-rgbw-bXi .logout-2-vK6 {
+  }
+.food_search_background .bottom_div .logout_div .logout_icon {
   margin-bottom: 1.8rem;
   width: 6.8532rem;
   height: 9rem;
@@ -78,8 +57,9 @@ body {
   object-fit: cover;
   vertical-align: top;
   flex-shrink: 0;
+  
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-rgbw-bXi .k-yap-eF6 {
+.food_search_background .bottom_div .logout_div .logout_text {
   margin-right: 0.6532rem;
   max-width: 7.3rem;
   font-size: 3.2rem;
@@ -89,14 +69,14 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-zdly-k3E {
+.food_search_background .bottom_div .food_suggestion_div {
   margin: 2.1rem 2.7rem 0rem 0rem;
   align-items: center;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-zdly-k3E .rectangle-10-GnG {
+.food_search_background .bottom_div .food_suggestion_div .food_suggestion_icon {
   margin-right: 0.3rem;
   width: 10.2rem;
   height: 10.6rem;
@@ -105,7 +85,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-zdly-k3E .yemek-nerisi-al-b3r {
+.food_search_background .bottom_div .food_suggestion_div .food_suggestion_text {
   max-width: 13.5rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -114,14 +94,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-s9zt-sGG {
+.food_search_background .bottom_div .profile_div {
   margin: 4.5rem 4.2rem 2.3rem 0rem;
   width: 13.3rem;
   height: calc(100% - 6.8rem);
   position: relative;
   flex-shrink: 0;
+  
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-s9zt-sGG .rectangle-2-Bnk {
+.food_search_background .bottom_div .profile_div .profile_icon {
   width: 13.3rem;
   height: 10.6rem;
   cursor: pointer;
@@ -131,7 +112,7 @@ body {
   object-fit: cover;
   vertical-align: top;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-s9zt-sGG .profil-j3a {
+.food_search_background .bottom_div .profile_div .profile_text {
   width: 7.8rem;
   height: 3.9rem;
   position: absolute;
@@ -144,15 +125,16 @@ body {
   font-family: Inter, 'Source Sans Pro';
   white-space: nowrap;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-chwc-EW8 {
+.food_search_background .bottom_div .mainpage_div {
   margin: 5.4rem 0rem 2.3rem 0rem;
   height: calc(100% - 7.7rem);
   align-items: center;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+  
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-chwc-EW8 .icons8-home-50-1-mW4 {
+.food_search_background .bottom_div .mainpage_div .mainpage_icon {
   margin-left: 0.1rem;
   width: 9rem;
   height: 8.9rem;
@@ -161,7 +143,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-ggxn-65A .auto-group-chwc-EW8 .ana-sayfa-GBv {
+.food_search_background .bottom_div .mainpage_div .mainpage_text {
   font-size: 3.2rem;
   font-weight: 400;
   line-height: 1.2125;
@@ -170,40 +152,10 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-zlrr-ztc {
-  box-sizing: border-box;
-  padding: 2.1rem 133.7rem 1.8rem 1.8rem;
-  width: 165.8rem;
-  height: 10.4rem;
-  position: absolute;
-  left: 12.9rem;
-  top: 7rem;
-  display: flex;
-  align-items: center;
-  border: solid 0 #000000;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.5699999928) -0%, #3b6bb2 100%, #3b6bb2 100%);
-  border-radius: 2.5rem;
-}
-.desktop-3-mYg .auto-group-zlrr-ztc .rectangle-13-SVi {
-  margin-right: 1.8rem;
-  width: 6.8rem;
-  height: 6.5rem;
-  object-fit: cover;
-  vertical-align: top;
-  border-radius: 4.5rem;
-  flex-shrink: 0;
-}
-.desktop-3-mYg .auto-group-zlrr-ztc .ne-aryorsun--xDA {
-  margin-bottom: 0.8rem;
-  font-size: 3.2rem;
-  font-weight: 400;
-  line-height: 1.2125;
-  color: rgba(0, 0, 0, 0.6100000143);
-  font-family: Inter, 'Source Sans Pro';
-  white-space: nowrap;
-  flex-shrink: 0;
-}
-.desktop-3-mYg .auto-group-cpf2-oUg {
+
+
+
+.food_search_background .consumed_favourites_div {
   width: 165.8rem;
   height: 6.8rem;
   position: absolute;
@@ -211,8 +163,9 @@ body {
   top: 30.5rem;
   display: flex;
   align-items: center;
+  
 }
-.desktop-3-mYg .auto-group-cpf2-oUg .auto-group-huag-LDi {
+.food_search_background .consumed_favourites_div .recently_consumed {
   margin-right: 54.2rem;
   width: 55.8rem;
   height: 100%;
@@ -229,7 +182,7 @@ body {
   border-radius: 2.5rem;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-cpf2-oUg .auto-group-pq1e-yGg {
+.food_search_background .consumed_favourites_div .favourites {
   width: 55.8rem;
   height: 100%;
   font-size: 3.2rem;
@@ -245,7 +198,7 @@ body {
   border-radius: 2.5rem;
   flex-shrink: 0;
 }
-.desktop-3-mYg .line-1-EiQ {
+.food_search_background .line1-1 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -253,7 +206,7 @@ body {
   top: 50.7rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-6-tnx {
+.food_search_background .line2-1 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -261,7 +214,7 @@ body {
   top: 50.3rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-7-dkY {
+.food_search_background .line2-2 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -269,7 +222,7 @@ body {
   top: 61.3rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-8-aQt {
+.food_search_background .line2-3 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -277,7 +230,7 @@ body {
   top: 72.3rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-9-8SQ {
+.food_search_background .line2-4 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -285,7 +238,7 @@ body {
   top: 83.3rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-2-G2p {
+.food_search_background .line1-2 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -293,7 +246,7 @@ body {
   top: 61.7rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-3-PdE {
+.food_search_background .line1-3 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -301,7 +254,7 @@ body {
   top: 72.7rem;
   background-color: #000000;
 }
-.desktop-3-mYg .line-4-w8x {
+.food_search_background .line1-4 {
   width: 72.4rem;
   height: 0.1rem;
   position: absolute;
@@ -309,7 +262,7 @@ body {
   top: 83.7rem;
   background-color: #000000;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg {
+.food_search_background .first_part_div {
   width: 183.4rem;
   height: 7.4rem;
   position: absolute;
@@ -317,8 +270,9 @@ body {
   top: 42.3rem;
   display: flex;
   align-items: center;
+  
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .halanm-yumurta-1-tam-50g-cF6 {
+.food_search_background .first_part_div .text_1-1 {
   margin: 0.6rem 20.9rem 0rem 0rem;
   max-width: 30.1rem;
   font-size: 3.2rem;
@@ -328,16 +282,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .halanm-yumurta-1-tam-50g-cF6 .halanm-yumurta-1-tam-50g-cF6-sub-0 {
-}
-.desktop-3-mYg .auto-group-qzt2-Ueg .halanm-yumurta-1-tam-50g-cF6 .halanm-yumurta-1-tam-50g-cF6-sub-1 {
+
+.food_search_background .first_part_div .text_1-1 .text_1-1_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .kcal-eb6 {
+.food_search_background .first_part_div .text_1-1_kcal {
   margin: 0rem 3.5rem 0.7rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -347,7 +300,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .icons8-add-50-2-13-Zi4 {
+.food_search_background .first_part_div .text_1-1_icon {
   margin: 0rem 39.2rem 0.8rem 0rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -355,7 +308,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .patates-kzartmas-1-porsiyon-75g-V5v {
+.food_search_background .first_part_div .text_2-1 {
   margin: 0.6rem 21.7rem 0rem 0rem;
   max-width: 29.3rem;
   font-size: 3.2rem;
@@ -365,16 +318,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .patates-kzartmas-1-porsiyon-75g-V5v .patates-kzartmas-1-porsiyon-75g-V5v-sub-0 {
-}
-.desktop-3-mYg .auto-group-qzt2-Ueg .patates-kzartmas-1-porsiyon-75g-V5v .patates-kzartmas-1-porsiyon-75g-V5v-sub-1 {
+
+.food_search_background .first_part_div .text_2-1 .text_2-1_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .kcal-GVz {
+.food_search_background .first_part_div .text_2-1_kcal {
   margin: 0rem 2.4rem 0.7rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -384,7 +336,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-qzt2-Ueg .icons8-add-50-2-9-8HJ {
+.food_search_background .first_part_div .text_2-1_icon {
   margin-bottom: 0.6rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -392,7 +344,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp {
+.food_search_background .second_part_div {
   width: 183.4rem;
   height: 8.5rem;
   position: absolute;
@@ -400,8 +352,9 @@ body {
   top: 52.3rem;
   display: flex;
   align-items: center;
+  
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .beyaz-ekmek-1-dilim-28g-aQC {
+.food_search_background .second_part_div .text_1-2 {
   margin: 1.7rem 29.1rem 0rem 0rem;
   max-width: 21.9rem;
   font-size: 3.2rem;
@@ -411,16 +364,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .beyaz-ekmek-1-dilim-28g-aQC .beyaz-ekmek-1-dilim-28g-aQC-sub-0 {
-}
-.desktop-3-mYg .auto-group-6nqa-Fcp .beyaz-ekmek-1-dilim-28g-aQC .beyaz-ekmek-1-dilim-28g-aQC-sub-1 {
+
+.food_search_background .second_part_div .text_1-2 .text_1-2_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .kcal-Zmv {
+.food_search_background .second_part_div .text_1-2_kcal {
   margin: 0rem 3.5rem 1.8rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -430,7 +382,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .icons8-add-50-2-14-tZJ {
+.food_search_background .second_part_div .text_1-2_icon {
   margin: 0rem 39.2rem 0.7rem 0rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -438,7 +390,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .mercimek-orbas-1-kase-300g-DLg {
+.food_search_background .second_part_div .text_2-2 {
   margin: 1.7rem 23.3rem 0rem 0rem;
   max-width: 27.4rem;
   font-size: 3.2rem;
@@ -448,16 +400,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .mercimek-orbas-1-kase-300g-DLg .mercimek-orbas-1-kase-300g-DLg-sub-0 {
-}
-.desktop-3-mYg .auto-group-6nqa-Fcp .mercimek-orbas-1-kase-300g-DLg .mercimek-orbas-1-kase-300g-DLg-sub-1 {
+
+.food_search_background .second_part_div .text_2-2 .text_2-2_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .kcal-Ko2 {
+.food_search_background .second_part_div .text_2-2_kcal {
   margin: 0rem 2.6rem 1.2rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -467,7 +418,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-6nqa-Fcp .icons8-add-50-2-10-3yv {
+.food_search_background .second_part_div .text_2-2_icon {
   margin-bottom: 1.9rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -475,7 +426,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE {
+.food_search_background .third_part_div {
   width: 183.4rem;
   height: 8.6rem;
   position: absolute;
@@ -483,8 +434,9 @@ body {
   top: 63.3rem;
   display: flex;
   align-items: center;
+  
 }
-.desktop-3-mYg .auto-group-p1il-BqE .muz-1-adet-150g-KRe {
+.food_search_background .third_part_div .text_1-3 {
   margin: 1.8rem 36.1rem 0rem 0rem;
   max-width: 14.9rem;
   font-size: 3.2rem;
@@ -494,16 +446,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE .muz-1-adet-150g-KRe .muz-1-adet-150g-KRe-sub-0 {
-}
-.desktop-3-mYg .auto-group-p1il-BqE .muz-1-adet-150g-KRe .muz-1-adet-150g-KRe-sub-1 {
+
+.food_search_background .third_part_div .text_1-3 .text_1-3_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-p1il-BqE .kcal-x7E {
+.food_search_background .third_part_div .text_1-3_kcal {
   margin: 0rem 1.7rem 1.5rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -513,7 +464,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE .icons8-add-50-2-15-szt {
+.food_search_background .third_part_div .text_1-3_icon {
   margin: 0rem 39.1rem 0.8rem 0rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -521,7 +472,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE .tavuk-gspimi-1-dilim-58g-DJ4 {
+.food_search_background .third_part_div .text_2-3 {
   margin: 1.4rem 19.4rem 0rem 0rem;
   max-width: 31.1rem;
   font-size: 3.2rem;
@@ -531,16 +482,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE .tavuk-gspimi-1-dilim-58g-DJ4 .tavuk-gspimi-1-dilim-58g-DJ4-sub-0 {
-}
-.desktop-3-mYg .auto-group-p1il-BqE .tavuk-gspimi-1-dilim-58g-DJ4 .tavuk-gspimi-1-dilim-58g-DJ4-sub-1 {
+
+.food_search_background .third_part_div .text_2-3 .text_2-3_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-p1il-BqE .kcal-Pbr {
+.food_search_background .third_part_div .text_2-3_kcal {
   margin: 0rem 3.4rem 2.7rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -550,7 +500,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-p1il-BqE .icons8-add-50-2-11-7nk {
+.food_search_background .third_part_div .text_2-3_icon {
   margin-bottom: 2rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -558,7 +508,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng {
+.food_search_background .fourth_part_div {
   width: 183.4rem;
   height: 8.4rem;
   position: absolute;
@@ -566,8 +516,9 @@ body {
   top: 74.6rem;
   display: flex;
   align-items: flex-start;
+  
 }
-.desktop-3-mYg .auto-group-s4ww-eng .st-1-bardak-250g-m6c {
+.food_search_background .fourth_part_div .text_1-4 {
   margin: 1.6rem 33rem 0rem 0rem;
   max-width: 18rem;
   font-size: 3.2rem;
@@ -577,16 +528,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng .st-1-bardak-250g-m6c .st-1-bardak-250g-m6c-sub-0 {
-}
-.desktop-3-mYg .auto-group-s4ww-eng .st-1-bardak-250g-m6c .st-1-bardak-250g-m6c-sub-1 {
+
+.food_search_background .fourth_part_div .text_1-4 .text_1-4_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-s4ww-eng .kcal-iAG {
+.food_search_background .fourth_part_div .text_1-4_kcal {
   margin: 1.2rem 1.7rem 0rem 0rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -596,7 +546,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng .icons8-add-50-2-16-1v4 {
+.food_search_background .fourth_part_div .text_1-4_icon {
   margin: 0.3rem 39.2rem 0rem 0rem;
   width: 6.6rem;
   height: 6.6rem;
@@ -604,7 +554,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng .elma-1-tam-90g-JuA {
+.food_search_background .fourth_part_div .text_2-4 {
   margin: 1.6rem 37.1rem 0rem 0rem;
   max-width: 13rem;
   font-size: 3.2rem;
@@ -614,16 +564,15 @@ body {
   font-family: Inter, 'Source Sans Pro';
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng .elma-1-tam-90g-JuA .elma-1-tam-90g-JuA-sub-0 {
-}
-.desktop-3-mYg .auto-group-s4ww-eng .elma-1-tam-90g-JuA .elma-1-tam-90g-JuA-sub-1 {
+
+.food_search_background .fourth_part_div .text_2-4 .text_2-4_gram {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 1.2125;
   color: #000000;
   font-family: Inter, 'Source Sans Pro';
 }
-.desktop-3-mYg .auto-group-s4ww-eng .kcal-Lax {
+.food_search_background .fourth_part_div .text_2-4_kcal {
   margin-right: 4.8rem;
   font-size: 3.2rem;
   font-weight: 400;
@@ -633,7 +582,7 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.desktop-3-mYg .auto-group-s4ww-eng .icons8-add-50-2-12-coN {
+.food_search_background .fourth_part_div .text_2-4_icon {
   width: 6.6rem;
   height: 6.6rem;
   object-fit: cover;
