--- a/styles/scss/desktop-3.scss
+++ b/styles/scss/desktop-3.scss
@@ -14,14 +14,14 @@ input {
 }
 body {
   width: 192rem;
-}.desktop-3-mYg {
+}.food_search_background {
   width: 100%;
   height: 108rem;
   position: relative;
   overflow: hidden;
   background-color: #f1e4d1;
 
-  .auto-group-ggxn-65A {
+  .bottom_div {
     width: 184.4rem;
     height: 20.5rem;
     position: absolute;
@@ -30,14 +30,14 @@ body {
     display: flex;
     align-items: center;
 
-    .auto-group-rgbw-bXi {
+    .logout_div {
       flex-direction: column;
       flex-shrink: 0;
       margin: 0rem 127.447rem 1.9rem 0rem;
       align-items: flex-end;
       display: flex;
 
-      .logout-2-vK6 {
+      .logout_icon {
         margin-bottom: 1.8rem;
         width: 6.8532rem;
         height: 9rem;
@@ -46,7 +46,7 @@ body {
         vertical-align: top;
         flex-shrink: 0;
       }
-      .k-yap-eF6 {
+      .logout_text {
         color: #000000;
         font-family: Inter, 'Source Sans Pro';
         flex-shrink: 0;
@@ -57,14 +57,14 @@ body {
         line-height: 1.2125;
       }
     }
-    .auto-group-zdly-k3E {
+    .food_suggestion_div {
       display: flex;
       flex-direction: column;
       flex-shrink: 0;
       margin: 2.1rem 2.7rem 0rem 0rem;
       align-items: center;
 
-      .rectangle-10-GnG {
+      .food_suggestion_icon {
         margin-right: 0.3rem;
         width: 10.2rem;
         height: 10.6rem;
@@ -73,7 +73,7 @@ body {
         vertical-align: top;
         flex-shrink: 0;
       }
-      .yemek-nerisi-al-b3r {
+      .food_suggestion_text {
         font-size: 3.2rem;
         font-weight: 400;
         line-height: 1.2125;
@@ -83,14 +83,14 @@ body {
         max-width: 13.5rem;
       }
     }
-    .auto-group-s9zt-sGG {
+    .profile_div {
       margin: 4.5rem 4.2rem 2.3rem 0rem;
       width: 13.3rem;
       height: calc(100% - 6.8rem);
       position: relative;
       flex-shrink: 0;
 
-      .rectangle-2-Bnk {
+      .profile_icon {
         width: 13.3rem;
         height: 10.6rem;
         cursor: pointer;
@@ -100,7 +100,7 @@ body {
         object-fit: cover;
         vertical-align: top;
       }
-      .profil-j3a {
+      .profile_text {
         top: 9.8rem;
         color: #000000;
         font-family: Inter, 'Source Sans Pro';
@@ -114,7 +114,7 @@ body {
         position: absolute;
       }
     }
-    .auto-group-chwc-EW8 {
+    .mainpage_div {
       align-items: center;
       display: flex;
       flex-direction: column;
@@ -122,7 +122,7 @@ body {
       margin: 5.4rem 0rem 2.3rem 0rem;
       height: calc(100% - 7.7rem);
 
-      .icons8-home-50-1-mW4 {
+      .mainpage_icon {
         vertical-align: top;
         flex-shrink: 0;
         margin-left: 0.1rem;
@@ -131,7 +131,7 @@ body {
         cursor: pointer;
         object-fit: cover;
       }
-      .ana-sayfa-GBv {
+      .mainpage_text {
         font-family: Inter, 'Source Sans Pro';
         white-space: nowrap;
         flex-shrink: 0;
@@ -142,41 +142,8 @@ body {
       }
     }
   }
-  .auto-group-zlrr-ztc {
-    border-radius: 2.5rem;
-    padding: 2.1rem 133.7rem 1.8rem 1.8rem;
-    height: 10.4rem;
-    top: 7rem;
-    display: flex;
-    align-items: center;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.5699999928) -0%, #3b6bb2 100%, #3b6bb2 100%);
-    box-sizing: border-box;
-    width: 165.8rem;
-    position: absolute;
-    left: 12.9rem;
-    border: solid 0 #000000;
 
-    .rectangle-13-SVi {
-      margin-right: 1.8rem;
-      width: 6.8rem;
-      height: 6.5rem;
-      object-fit: cover;
-      vertical-align: top;
-      border-radius: 4.5rem;
-      flex-shrink: 0;
-    }
-    .ne-aryorsun--xDA {
-      flex-shrink: 0;
-      margin-bottom: 0.8rem;
-      font-size: 3.2rem;
-      font-weight: 400;
-      line-height: 1.2125;
-      color: rgba(0, 0, 0, 0.6100000143);
-      font-family: Inter, 'Source Sans Pro';
-      white-space: nowrap;
-    }
-  }
-  .auto-group-cpf2-oUg {
+  .consumed_favourites_div {
     height: 6.8rem;
     position: absolute;
     left: 12.9rem;
@@ -185,7 +152,7 @@ body {
     align-items: center;
     width: 165.8rem;
 
-    .auto-group-huag-LDi {
+    .recently_consumed {
       height: 100%;
       font-size: 3.2rem;
       line-height: 1.2125;
@@ -202,7 +169,7 @@ body {
       width: 55.8rem;
       white-space: nowrap;
     }
-    .auto-group-pq1e-yGg {
+    .favourites {
       display: flex;
       flex-shrink: 0;
       width: 55.8rem;
@@ -219,7 +186,7 @@ body {
       align-items: center;
     }
   }
-  .line-1-EiQ {
+  .line1-1 {
     width: 72.4rem;
     height: 0.1rem;
     position: absolute;
@@ -227,7 +194,7 @@ body {
     top: 50.7rem;
     background-color: #000000;
   }
-  .line-6-tnx {
+  .line2-1 {
     background-color: #000000;
     width: 72.4rem;
     height: 0.1rem;
@@ -235,7 +202,7 @@ body {
     left: 115.5rem;
     top: 50.3rem;
   }
-  .line-7-dkY {
+  .line2-2 {
     position: absolute;
     left: 115.5rem;
     top: 61.3rem;
@@ -243,7 +210,7 @@ body {
     width: 72.4rem;
     height: 0.1rem;
   }
-  .line-8-aQt {
+  .line2-3 {
     top: 72.3rem;
     background-color: #000000;
     width: 72.4rem;
@@ -251,7 +218,7 @@ body {
     position: absolute;
     left: 115.5rem;
   }
-  .line-9-8SQ {
+  .line2-4 {
     position: absolute;
     left: 115.5rem;
     top: 83.3rem;
@@ -259,7 +226,7 @@ body {
     width: 72.4rem;
     height: 0.1rem;
   }
-  .line-2-G2p {
+  .line1-2 {
     left: 3.9rem;
     top: 61.7rem;
     background-color: #000000;
@@ -267,7 +234,7 @@ body {
     height: 0.1rem;
     position: absolute;
   }
-  .line-3-PdE {
+  .line1-3 {
     position: absolute;
     left: 3.9rem;
     top: 72.7rem;
@@ -275,7 +242,7 @@ body {
     width: 72.4rem;
     height: 0.1rem;
   }
-  .line-4-w8x {
+  .line1-4 {
     width: 72.4rem;
     height: 0.1rem;
     position: absolute;
@@ -283,7 +250,7 @@ body {
     top: 83.7rem;
     background-color: #000000;
   }
-  .auto-group-qzt2-Ueg {
+  .first_part_div {
     width: 183.4rem;
     height: 7.4rem;
     position: absolute;
@@ -292,7 +259,7 @@ body {
     display: flex;
     align-items: center;
 
-    .halanm-yumurta-1-tam-50g-cF6 {
+    .text_1-1 {
       flex-shrink: 0;
       margin: 0.6rem 20.9rem 0rem 0rem;
       max-width: 30.1rem;
@@ -302,9 +269,8 @@ body {
       color: #000000;
       font-family: Inter, 'Source Sans Pro';
 
-      .halanm-yumurta-1-tam-50g-cF6-sub-0 {
-      }
-      .halanm-yumurta-1-tam-50g-cF6-sub-1 {
+     
+      .text_1-1_gram {
         font-size: 2.4rem;
         font-weight: 400;
         line-height: 1.2125;
@@ -312,7 +278,7 @@ body {
         font-family: Inter, 'Source Sans Pro';
       }
     }
-    .kcal-eb6 {
+    .text_1-1_kcal {
       font-size: 3.2rem;
       font-weight: 400;
       line-height: 1.2125;
@@ -322,7 +288,7 @@ body {
       flex-shrink: 0;
       margin: 0rem 3.5rem 0.7rem 0rem;
     }
-    .icons8-add-50-2-13-Zi4 {
+    .text_1-1_icon {
       height: 6.6rem;
       object-fit: cover;
       vertical-align: top;
@@ -330,7 +296,7 @@ body {
       margin: 0rem 39.2rem 0.8rem 0rem;
       width: 6.6rem;
     }
-    .patates-kzartmas-1-porsiyon-75g-V5v {
+    .text_2-1 {
       font-size: 3.2rem;
       font-weight: 400;
       line-height: 1.2125;
@@ -340,9 +306,8 @@ body {
       margin: 0.6rem 21.7rem 0rem 0rem;
       max-width: 29.3rem;
 
-      .patates-kzartmas-1-porsiyon-75g-V5v-sub-0 {
-      }
-      .patates-kzartmas-1-porsiyon-75g-V5v-sub-1 {
+      
+      .text_2-1_gram {
         color: #000000;
         font-family: Inter, 'Source Sans Pro';
         font-size: 2.4rem;
@@ -350,7 +315,7 @@ body {
         line-height: 1.2125;
       }
     }
-    .kcal-GVz {
+    .text_2-1_kcal {
       line-height: 1.2125;
       color: #000000;
       font-family: Inter, 'Source Sans Pro';
@@ -360,7 +325,7 @@ body {
       font-size: 3.2rem;
       font-weight: 400;
     }
-    .icons8-add-50-2-9-8HJ {
+    .text_2-1_icon {
       flex-shrink: 0;
       margin-bottom: 0.6rem;
       width: 6.6rem;
@@ -369,7 +334,7 @@ body {
       vertical-align: top;
     }
   }
-  .auto-group-6nqa-Fcp {
+  .second_part_div {
     width: 183.4rem;
     height: 8.5rem;
     position: absolute;
@@ -378,7 +343,7 @@ body {
     display: flex;
     align-items: center;
 
-    .beyaz-ekmek-1-dilim-28g-aQC {
+    .text_1-2 {
       margin: 1.7rem 29.1rem 0rem 0rem;
       max-width: 21.9rem;
       font-size: 3.2rem;
@@ -388,9 +353,8 @@ body {
       font-family: Inter, 'Source Sans Pro';
       flex-shrink: 0;
 
-      .beyaz-ekmek-1-dilim-28g-aQC-sub-0 {
-      }
-      .beyaz-ekmek-1-dilim-28g-aQC-sub-1 {
+      
+      .text_1-2_gram {
         line-height: 1.2125;
         color: #000000;
         font-family: Inter, 'Source Sans Pro';
@@ -398,7 +362,7 @@ body {
         font-weight: 400;
       }
     }
-    .kcal-Zmv {
+    .text_1-2_kcal {
       font-family: Inter, 'Source Sans Pro';
       white-space: nowrap;
       flex-shrink: 0;
@@ -408,7 +372,7 @@ body {
       line-height: 1.2125;
       color: #000000;
     }
-    .icons8-add-50-2-14-tZJ {
+    .text_1-2_icon {
       height: 6.6rem;
       object-fit: cover;
       vertical-align: top;
@@ -416,7 +380,7 @@ body {
       margin: 0rem 39.2rem 0.7rem 0rem;
       width: 6.6rem;
     }
-    .mercimek-orbas-1-kase-300g-DLg {
+    .text_2-2 {
       margin: 1.7rem 23.3rem 0rem 0rem;
       max-width: 27.4rem;
       font-size: 3.2rem;
@@ -426,9 +390,8 @@ body {
       font-family: Inter, 'Source Sans Pro';
       flex-shrink: 0;
 
-      .mercimek-orbas-1-kase-300g-DLg-sub-0 {
-      }
-      .mercimek-orbas-1-kase-300g-DLg-sub-1 {
+      
+      .text_2-2_gram {
         font-family: Inter, 'Source Sans Pro';
         font-size: 2.4rem;
         font-weight: 400;
@@ -436,7 +399,7 @@ body {
         color: #000000;
       }
     }
-    .kcal-Ko2 {
+    .text_2-2_kcal {
       font-family: Inter, 'Source Sans Pro';
       white-space: nowrap;
       flex-shrink: 0;
@@ -446,7 +409,7 @@ body {
       line-height: 1.2125;
       color: #000000;
     }
-    .icons8-add-50-2-10-3yv {
+    .text_2-2_icon {
       width: 6.6rem;
       height: 6.6rem;
       object-fit: cover;
@@ -455,7 +418,7 @@ body {
       margin-bottom: 1.9rem;
     }
   }
-  .auto-group-p1il-BqE {
+  .third_part_div {
     width: 183.4rem;
     height: 8.6rem;
     position: absolute;
@@ -464,7 +427,7 @@ body {
     display: flex;
     align-items: center;
 
-    .muz-1-adet-150g-KRe {
+    .text_1-3 {
       font-family: Inter, 'Source Sans Pro';
       flex-shrink: 0;
       margin: 1.8rem 36.1rem 0rem 0rem;
@@ -474,9 +437,8 @@ body {
       line-height: 1.2125;
       color: #000000;
 
-      .muz-1-adet-150g-KRe-sub-0 {
-      }
-      .muz-1-adet-150g-KRe-sub-1 {
+      
+      .text_1-3_gram {
         font-weight: 400;
         line-height: 1.2125;
         color: #000000;
@@ -484,7 +446,7 @@ body {
         font-size: 2.4rem;
       }
     }
-    .kcal-x7E {
+    .text_1-3_kcal {
       flex-shrink: 0;
       margin: 0rem 1.7rem 1.5rem 0rem;
       font-size: 3.2rem;
@@ -494,7 +456,7 @@ body {
       font-family: Inter, 'Source Sans Pro';
       white-space: nowrap;
     }
-    .icons8-add-50-2-15-szt {
+    .text_1-3_icon {
       vertical-align: top;
       flex-shrink: 0;
       margin: 0rem 39.1rem 0.8rem 0rem;
@@ -502,7 +464,7 @@ body {
       height: 6.6rem;
       object-fit: cover;
     }
-    .tavuk-gspimi-1-dilim-58g-DJ4 {
+    .text_2-3 {
       max-width: 31.1rem;
       font-size: 3.2rem;
       font-weight: 400;
@@ -512,9 +474,8 @@ body {
       flex-shrink: 0;
       margin: 1.4rem 19.4rem 0rem 0rem;
 
-      .tavuk-gspimi-1-dilim-58g-DJ4-sub-0 {
-      }
-      .tavuk-gspimi-1-dilim-58g-DJ4-sub-1 {
+     }
+      .text_2-3_gram {
         font-size: 2.4rem;
         font-weight: 400;
         line-height: 1.2125;
@@ -522,7 +483,7 @@ body {
         font-family: Inter, 'Source Sans Pro';
       }
     }
-    .kcal-Pbr {
+    .text_2-3_kcal {
       font-size: 3.2rem;
       font-weight: 400;
       line-height: 1.2125;
@@ -532,7 +493,7 @@ body {
       flex-shrink: 0;
       margin: 0rem 3.4rem 2.7rem 0rem;
     }
-    .icons8-add-50-2-11-7nk {
+    .text_2-3_icon {
       height: 6.6rem;
       object-fit: cover;
       vertical-align: top;
@@ -541,7 +502,7 @@ body {
       width: 6.6rem;
     }
   }
-  .auto-group-s4ww-eng {
+  .fourth_part_div {
     align-items: flex-start;
     width: 183.4rem;
     height: 8.4rem;
@@ -550,7 +511,7 @@ body {
     top: 74.6rem;
     display: flex;
 
-    .st-1-bardak-250g-m6c {
+    .text_1-4 {
       color: #000000;
       font-family: Inter, 'Source Sans Pro';
       flex-shrink: 0;
@@ -560,9 +521,8 @@ body {
       font-weight: 400;
       line-height: 1.2125;
 
-      .st-1-bardak-250g-m6c-sub-0 {
-      }
-      .st-1-bardak-250g-m6c-sub-1 {
+      
+      .text_1-4_gram {
         font-size: 2.4rem;
         font-weight: 400;
         line-height: 1.2125;
@@ -570,7 +530,7 @@ body {
         font-family: Inter, 'Source Sans Pro';
       }
     }
-    .kcal-iAG {
+    .text_1-4_kcal {
       margin: 1.2rem 1.7rem 0rem 0rem;
       font-size: 3.2rem;
       font-weight: 400;
@@ -580,7 +540,7 @@ body {
       white-space: nowrap;
       flex-shrink: 0;
     }
-    .icons8-add-50-2-16-1v4 {
+    .text_1-4_icon {
       width: 6.6rem;
       height: 6.6rem;
       object-fit: cover;
@@ -588,7 +548,7 @@ body {
       flex-shrink: 0;
       margin: 0.3rem 39.2rem 0rem 0rem;
     }
-    .elma-1-tam-90g-JuA {
+    .text_2-4 {
       flex-shrink: 0;
       margin: 1.6rem 37.1rem 0rem 0rem;
       max-width: 13rem;
@@ -598,9 +558,8 @@ body {
       color: #000000;
       font-family: Inter, 'Source Sans Pro';
 
-      .elma-1-tam-90g-JuA-sub-0 {
-      }
-      .elma-1-tam-90g-JuA-sub-1 {
+      
+      .text_2-4_gram {
         font-family: Inter, 'Source Sans Pro';
         font-size: 2.4rem;
         font-weight: 400;
@@ -608,7 +567,7 @@ body {
         color: #000000;
       }
     }
-    .kcal-Lax {
+    .text_2-4_kcal {
       white-space: nowrap;
       flex-shrink: 0;
       margin-right: 4.8rem;
@@ -618,7 +577,7 @@ body {
       color: #000000;
       font-family: Inter, 'Source Sans Pro';
     }
-    .icons8-add-50-2-12-coN {
+    .text_2-4_icon {
       vertical-align: top;
       flex-shrink: 0;
       width: 6.6rem;
@@ -626,4 +585,4 @@ body {
       object-fit: cover;
     }
   }
-}
+
